--- a/source/LintasKRL/res/layout/main.xml
+++ b/source/LintasKRL/res/layout/main.xml
@@ -4,39 +4,78 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="fill_parent"
-        android:layout_height="0dip"
-        android:layout_weight=".1"
-        android:gravity="center"
-        android:text="@string/hello" />
-
     <Spinner
         android:id="@+id/station_spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:prompt="@string/station_prompt" />
 
-    <WebView
-        android:id="@+id/webview"
-        android:layout_width="fill_parent"
-        android:layout_height="0dip"
-        android:layout_weight=".9"
-        android:visibility="gone" />
-
     <LinearLayout
-        android:id="@+id/opening"
         android:layout_width="fill_parent"
-        android:layout_height="0dip"
-        android:layout_weight=".9" >
+        android:layout_height="40dip"
+        android:gravity="right"
+        android:orientation="horizontal" >
 
         <TextView
-            android:id="@+id/opening_text"
-            android:layout_width="fill_parent"
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
             android:layout_height="fill_parent"
-            android:gravity="center"
-            android:text="Data akan muncul disini" />
+            android:layout_marginLeft="40dip"
+            android:gravity="center_vertical"
+            android:text="@string/no_station_selected"
+            android:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/star_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+            android:layout_marginLeft="30dip"
+            android:src="@drawable/ic_launcher" />
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/lineseparator" />
+
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:fillViewport="true"
+        android:scrollbars="none" >
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="200dip"
+            android:orientation="horizontal" >
+
+            <WebView
+                android:id="@+id/webview"
+                android:layout_width="fill_parent"
+                android:layout_height="200dip"
+                android:visibility="gone" />
+
+            <LinearLayout
+                android:id="@+id/opening"
+                android:layout_width="fill_parent"
+                android:layout_height="200dip"
+                android:gravity="center" >
+
+                <TextView
+                    android:id="@+id/opening_text"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
+                    android:gravity="center"
+                    android:text="@string/no_data" />
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
+
+    <ImageView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/lineseparator" />
+
+  
 
 </LinearLayout>
